Visual improvements, such as to the detail blocks. Ability to expand/collapse detail blocks all at once. Object comparison remains fixed at the top when scrolling down to easily switch between different objects.

--- a/src/Components/SidebySideCompare/CompareSide/CompareSide.module.css
+++ b/src/Components/SidebySideCompare/CompareSide/CompareSide.module.css
@@ -6,6 +6,7 @@
 
 summary.CompareSummary {
   font-size: 120%;
+  cursor: pointer;
 }
 
 details.CompareDetails {
