--- a/src/Components/SidebySideCompare/SidebySideCompare.module.css
+++ b/src/Components/SidebySideCompare/SidebySideCompare.module.css
@@ -7,6 +7,13 @@
   /* text-align: center; */
 }
 
+.CompareSide-Sticky {
+  position: sticky;
+  top: 0;
+  background-color: #000;
+  padding: 5px;
+}
+
 .Compare select {
   width: 100%;
   box-sizing: border-box;
